--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,15 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar{
-  width:10px
+  width:3px
+}
+::-webkit-scrollbar-thumb{
+  background: rgb(212, 212, 212);
+  border-radius: 20px;
+}
+::-webkit-scrollbar-track {
+  background:white;
+  border-radius: 50px;
 }
 
 
